max width scrollbars bugfix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3799,11 +3799,11 @@ main, .main {
   left: 0;
   width: 100%;
   /* fallback */
-  width: 100vw;
+  max-width: 100vw;
   height: 100%;
   /* fallback */
-  height: 100vh;
   max-height: 100%;
+  max-height: 100vh;
   z-index: 3;
   pointer-events: none; }
   @media screen and (max-width: 30rem) {
