--- a/assets/scss/components/_nav.scss
+++ b/assets/scss/components/_nav.scss
@@ -3,10 +3,10 @@
   top: 0;
   left: 0;
   width: 100%; /* fallback */
-  width: 100vw;
+  max-width: 100vw;
   height: 100%; /* fallback */
-  height: 100vh;
   max-height: 100%;
+  max-height: 100vh;
   z-index: 3;
   pointer-events: none;
 
